# linezolid-amr

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
conda-recipe/: build.sh  meta.yaml
docs/: user-guide.html
linezolid_amr/: __init__.py  __main__.py  amrfinder.py  cli.py  fetch_references.py  internal_mlst.py  mlst.py  references.py  reporting.py  rrna23s.py  summary.py
linezolid_amr/data/mlst_schemes/efaecalis/: profiles.tsv
linezolid_amr/data/mlst_schemes/efaecium/: profiles.tsv
linezolid_amr/data/mlst_schemes/spneumoniae/: profiles.tsv
linezolid_amr/data/references/: loci.json
linezolid_amr/data/references/bundled/: Enterococcus_faecalis_23S.fasta  Enterococcus_faecalis_23S_lzd_positions.bed  Enterococcus_faecalis_23S_position_map.tsv  Enterococcus_faecium_23S.fasta  Enterococcus_faecium_23S_lzd_positions.bed  Enterococcus_faecium_23S_position_map.tsv  Staphylococcus_aureus_23S.fasta  Staphylococcus_aureus_23S_lzd_positions.bed  Staphylococcus_aureus_23S_position_map.tsv  Streptococcus_pneumoniae_23S.fasta  Streptococcus_pneumoniae_23S_lzd_positions.bed  Streptococcus_pneumoniae_23S_position_map.tsv  ecoli_K12_23S_rrlB.fasta
scripts/: validate_mlst_vs_seemann.py
tests/: test_amrfinder.py  test_cli.py  test_folder_discovery.py  test_mlst.py  test_references.py  test_summary.py
