[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "linezolid-amr"
version = "0.1.4"
description = "Integrated AMR profiling and 23S rRNA linezolid-resistance frequency analysis from assembly + raw reads"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Linezolid-AMR contributors" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "pysam>=0.22",
    "biopython>=1.81",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
linezolid-amr = "linezolid_amr.cli:main"

[project.urls]
Homepage = "https://github.com/iowa69/linezolid-amr"
Issues = "https://github.com/iowa69/linezolid-amr/issues"

[tool.setuptools.packages.find]
include = ["linezolid_amr*"]

[tool.setuptools.package-data]
linezolid_amr = [
    "data/references/*.json",
    "data/references/bundled/*.fasta",
    "data/references/bundled/*.bed",
    "data/references/bundled/*.tsv",
    "data/mlst_schemes/*/profiles.tsv",
    "data/mlst_schemes/*/loci.txt",
    "data/mlst_schemes/*/*.fasta.gz",
]
